Fix files#show title to wrap

--- a/rails/app/assets/stylesheets/files.css
+++ b/rails/app/assets/stylesheets/files.css
@@ -1,3 +1,6 @@
+.files-show__title {
+  overflow-wrap: anywhere;
+}
 .files-show__content {
   white-space: pre;
 }
